created a new branch. Created CV and Contact files. WIP

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
         You need to enable JavaScript to run this React application.
     </noscript>
     <script src="dist/bundle.js"></script>
+
+    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+        <input type="text" name="name" />
+        <input type="email" name="email" />
+        <textarea name="message"></textarea>
+    </form>
+    
 </body>
 
 </html
